# VBVS--VIXEN

./: .gitignore  .runsettings  CHANGELOG.md  DOCUMENTATION_INDEX.md  LICENSE  README.md  VOXEL_ENGINE_FRAMEWORK.md
VIXEN/: .gitignore  .mcp.json  .shader_tool_manifest.json  ARCHITECTURE_CRITIQUE_2026-01-03.md  ARCHITECTURE_QUICK_REFERENCE.md  ARCHITECTURE_REVIEW_SUMMARY_2026-01-03.md  BUILD_SUCCESS_LOG.md  CLAUDE.md  CMakeLists.txt  COMPILATION_FIXES_SUMMARY.md  DEBUG_GRAIN_ARTIFACT.md  DELETION-API-ENDPOINTS-CHECKED.md  DELETION-RECOVERY-INVESTIGATION.md  DELETION-RECOVERY-SUMMARY.txt  DELIVERY-NOTES.txt  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_PLAN_V2.md  NAMESPACE_FIX_SUMMARY.md  PRE_ALLOCATION_IMPLEMENTATION_GUIDE.md  PROGRESS_UPDATE.md  README-DELETION-INVESTIGATION.txt  README.md  REFACTORING_COMPLETION_REPORT.md  REFACTORING_GUIDE.md  REFACTORING_PATTERNS.md  REFACTORING_QUICK_REFERENCE.md  SUCCESS_TEST.txt  app_camera_reposition.txt  app_cornell_box.txt  app_debug_bounds.txt  app_full_output.txt  app_grid_corrected.txt  app_output.txt  app_ray_direction_debug.txt  app_test_generic_update.txt  bash.exe.stackdump  build_check.txt  build_errors.txt  (+47 more)
VIXEN/.claude/: settings.json  settings.local.json
VIXEN/.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
VIXEN/CashSystem/: CMakeLists.txt
VIXEN/EventBus/: CMakeLists.txt  tests && cp ccppVBVS--VIXENVIXENtestsEventBusCMakeLists.txt ccppVBVS--VIXENVIXENEventBustests
VIXEN/RenderGraph/: CMakeLists.txt  README.md
VIXEN/ResourceManagement/: CMakeLists.txt
VIXEN/ShaderManagement/: CMakeLists.txt  README.md  cmake_test_discovery_37baa9a36d.json
VIXEN/Shaders/: ComputeTest.comp  Draw.frag  Draw.vert  PathTracer.comp  README.md  VoxelRayMarch.comp  VoxelRayMarch.comp.spv  VoxelRayMarch_fixed.comp  VoxelRayMarch_naive_dda.comp  VoxelRayMarch_new.comp
VIXEN/VixenBenchmark/: README.txt  benchmark_config.json  benchmark_config_logic_test.json  benchmark_fragment_test.json  benchmark_metrics_test.json  benchmark_quick_test.json
VIXEN/VulkanResources/: CMakeLists.txt
VIXEN/application/: CMakeLists.txt  README.md
VIXEN/archive/: VoxelInjectionExamples_deprecated.cpp
VIXEN/benchmark_results/: COMPUTE_128_CORNELL_BASELINE_RUN2.json  COMPUTE_128_CORNELL_BASELINE_RUN5.json  COMPUTE_128_CORNELL_BASELINE_RUN7.json  COMPUTE_128_CORNELL_EMPTY_SKIP_RUN6.json  COMPUTE_128_CORNELL_EMPTY_SKIP_RUN8.json  COMPUTE_64_CORNELL_BASELINE_RUN1.json  COMPUTE_64_CORNELL_BASELINE_RUN3.json  COMPUTE_64_CORNELL_EMPTY_SKIP_RUN2.json  COMPUTE_64_CORNELL_EMPTY_SKIP_RUN4.json  E2E_INTEGRATION_TEST.json  E2E_TEST_FLOW.json  compute_baseline_cornell_128_20pct.csv  compute_baseline_cornell_128_20pct.json  compute_baseline_cornell_128_50pct.csv  compute_baseline_cornell_128_50pct.json  compute_baseline_cornell_64_20pct.csv  compute_baseline_cornell_64_20pct.json  compute_baseline_cornell_64_50pct.csv  compute_baseline_cornell_64_50pct.json  compute_empty_skip_cornell_128_20pct.csv  compute_empty_skip_cornell_128_20pct.json  compute_empty_skip_cornell_128_50pct.csv  compute_empty_skip_cornell_128_50pct.json  compute_empty_skip_cornell_64_20pct.csv  compute_empty_skip_cornell_64_20pct.json  compute_empty_skip_cornell_64_50pct.csv  compute_empty_skip_cornell_64_50pct.json  suite_summary.json
VIXEN/binaries/: log.txt  output.txt  output2.txt  vulkan_app_log.txt
VIXEN/cmake/: BenchmarkPackage.cmake  VulkanHeaders.cmake
VIXEN/data/: benchmarks.xlsx  benchmarks_new.xlsx
VIXEN/dependencies/: CMakeLists.txt  README.md
VIXEN/docs/: VS_CODE_TESTING_SETUP.md
VIXEN/documentation/: ArchetypeBuilder-Architecture.md  ArchetypeBuilder-QuickReference.md  ArchitecturalPhases-Checkpoint.md  ArchitecturalReview-2025-10-31.md  ArchitecturalReview-2025-11-01.md  ArchitecturalReview-2025-11-02-PhaseF.md  ArchitecturalReview-CurrentState.md  BugFixes-RenderGraphIntegration.md  CashSystem-  DynamicCleanupSystem.md  EventBus-ResourceManagement-Integration.md  FeatureParity_Analysis.md  FrustumThickness-Rationale.md  Gaia-Pair-Hooks-Workaround.md  Migration-To-Zero-Overhead-System.md  NodeConfig-API-Improvements.md  PartialCleanupStrategy.md  Phase-B-Plan.md  PhaseH-VoxelInfrastructure-Plan.md  PhotonMapping-System.md  Project-Status-Summary.md  README.md  RenderGraph-Architecture-Overview.md  RenderGraph_Lifecycle_Schema.md  ResearchPhases-ParallelTrack.md  ResourceStateManagement.md  ShaderManagement-Integration-Plan.md  SpectralRendering-System.md  TestingAchievements-PhaseH.md  Type-System-Final-Summary.md  Type-System-Migration-Guide.md  TypedNodeExample.md  VoxelRayMarch-DebugAnalysis.md  VoxelRayTracingResearch-TechnicalRoadmap.md  gaia_pair_hooks_proposal.md  namespace_pch_migration_plan.md  smart-pointers-guide.md
VIXEN/include/: Hash.h  Headers.h  MeshData.h  VixenHash.h  VulkanApplication.h  VulkanApplicationBase.h  VulkanDescriptor.h  VulkanDevice.h  VulkanDrawable.h  VulkanError.h  VulkanGraphApplication.h  VulkanInstance.h  VulkanLayerAndExtension.h  VulkanPipeline.h  VulkanRenderer.h  VulkanShader.h  VulkanSwapChain.h  wrapper.h
VIXEN/libraries/: CMakeLists.txt  README.md
VIXEN/logger/: CMakeLists.txt  ILoggable.cpp  ILoggable.h  Logger.cpp  Logger.h
VIXEN/memory-bank/: INCLUDE-OPTIMIZATION-INDEX.md  INCLUDE-OPTIMIZATION-READY.md  activeContext.md  attribute-index-system.md  brickview-unified-api-example.md  codeQualityPlan.md  graph-editor-plan.md  handoff-agent-sandbox-updates.md  handoff-phase2.3-allocator-migration.md  productContext.md  progress.md  projectbrief.md  session-nov21-attribute-index-system.md  session-nov21-brickstorage-migration.md  session-nov21-predicate-migration.md  session-nov22-component-architecture.md  systemPatterns.md  techContext.md
VIXEN/shaders/: CMakeLists.txt  Compression.glsl  CoordinateTransforms.glsl  ESVOTraversal.glsl  Fullscreen.vert  Materials.glsl  OctreeTraversal-ESVO.glsl  RayGeneration.glsl  SVOTypes.glsl  ShaderCounters.glsl  VoxelRT.rchit  VoxelRT.rchit.spv  VoxelRT.rgen  VoxelRT.rgen.spv  VoxelRT.rint  VoxelRT.rint.spv  (+9 more)
(+2611 files in other folders)
